Bug 545716 - [12] expression switch doesn't consider that having all cases of an enum is enough to be exhaustive - comment 30
Change-Id: I767fee5e60f9bcc9357d307fc94f0c85d3fb543a
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>